ingress-controller/Platform9/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-emojivoto
  annotations:
    # ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/service-upstream: "true"
    # kubernetes.io/ingress.class: istio
    # consul.hashicorp.com/connect-inject: “true”
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-svc
            port:
              number: 80
